--- a/index.html
+++ b/index.html
@@ -46,17 +46,16 @@
             <section class="main-content">
                 <div class="ad-top">
 
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '31037bfc95eea319827433190321bc99',
-                            'format': 'iframe',
-                            'height': 90,
-                            'width': 728,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/31037bfc95eea319827433190321bc99/invoke.js"></script>
+                  <script type="text/javascript">
+	atOptions = {
+		'key' : '3f8143f325666e9470bcb5af38573dd5',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3f8143f325666e9470bcb5af38573dd5/invoke.js"></script>
 
                 </div>
 
@@ -658,31 +657,29 @@
 
             <div class="sidebar">
 
-                <script type="text/javascript">
-                    atOptions = {
-                        'key': 'c056290ae6472fcc026e9aa3e4433ff2',
-                        'format': 'iframe',
-                        'height': 300,
-                        'width': 160,
-                        'params': {}
-                    };
-                </script>
-                <script type="text/javascript"
-                    src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
+             <script type="text/javascript">
+	atOptions = {
+		'key' : 'b145f0a8ad4e19e103be39d5a7fa45be',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
 
 
 
-                <script type="text/javascript">
-                    atOptions = {
-                        'key': '4ef2fc17a7faded8a267471f28b41d6f',
-                        'format': 'iframe',
-                        'height': 600,
-                        'width': 160,
-                        'params': {}
-                    };
-                </script>
-                <script type="text/javascript"
-                    src="//www.highperformanceformat.com/4ef2fc17a7faded8a267471f28b41d6f/invoke.js"></script>
+              <script type="text/javascript">
+	atOptions = {
+		'key' : '475ea948a2b7dee94beb0656c6a6066b',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/475ea948a2b7dee94beb0656c6a6066b/invoke.js"></script>
 
 
 
