--- a/player.html
+++ b/player.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-   <script type='text/javascript' src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
-    <meta charset="UTF-8" />
+<script type='text/javascript' src='//pl18541007.profitableratecpm.com/91/94/0f/91940f84fa379733194239a75eb1cbd0.js'></script>
+	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuffStreams - Live Streams</title>
     <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/78013897?v=4">
@@ -123,16 +123,16 @@
         <div class="content-box">
             <section class="main-content">
                 <div class="ad-center">
-                   <script type="text/javascript">
+                 <script type="text/javascript">
 	atOptions = {
-		'key' : '1affd0df5f0aa4ec9c4aac51d7b2276b',
+		'key' : '0917b618562c4a09e453780af8821437',
 		'format' : 'iframe',
 		'height' : 60,
 		'width' : 468,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0917b618562c4a09e453780af8821437/invoke.js"></script>
                 </div>
                 <div
                     style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">
@@ -144,44 +144,44 @@
                         frameborder="0" allowfullscreen src=""></iframe>
                 </div>
                 <div class="ad-center">
-                   <script type="text/javascript">
+                  <script type="text/javascript">
 	atOptions = {
-		'key' : '6c8b2e342bc3150b1316c166262197fd',
+		'key' : '62a694d4a1a8f6f75b744585d414f93c',
 		'format' : 'iframe',
 		'height' : 50,
 		'width' : 320,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/62a694d4a1a8f6f75b744585d414f93c/invoke.js"></script>
                 </div>
             </section>
 
             <aside class="sidebar">
                 <div class="ad">
-                   <script type="text/javascript">
+                  <script type="text/javascript">
 	atOptions = {
-		'key' : '6367168a6dcbc9d005a65a2770432a28',
+		'key' : '05f629c84db5ad6e762d2406be4ee48d',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/05f629c84db5ad6e762d2406be4ee48d/invoke.js"></script>
                 </div>
 
                 <div class="ad">
-                   <script type="text/javascript">
+                  <script type="text/javascript">
 	atOptions = {
-		'key' : 'c056290ae6472fcc026e9aa3e4433ff2',
+		'key' : 'b145f0a8ad4e19e103be39d5a7fa45be',
 		'format' : 'iframe',
 		'height' : 300,
 		'width' : 160,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
                 </div>
             </aside>
         </div>
@@ -194,6 +194,25 @@
 
         dPlayer.src = myParam;
     </script>
+	 <script type="text/javascript">
+        var _Hasync = _Hasync || [];
+        _Hasync.push(['Histats.start', '1,4954898,4,511,95,18,00000000']);
+        _Hasync.push(['Histats.fasi', '1']);
+        _Hasync.push(['Histats.track_hits', '']);
+
+        (function () {
+            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+            hs.src = ('//s10.histats.com/js15_as.js');
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+        })();
+    </script>
+
+    <noscript>
+        <a href="/" target="_blank">
+            <img src="//sstatic1.histats.com/0.gif?4954898&amp;101" alt="web stats" border="0"
+                style="display: none !important;" />
+        </a>
+    </noscript>
 </body>
 
 </html>
