--- a/player.html
+++ b/player.html
@@ -1,138 +1,43 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-<script type='text/javascript' src='//pl18541007.profitableratecpm.com/91/94/0f/91940f84fa379733194239a75eb1cbd0.js'></script>
-	<meta charset="UTF-8" />
+    <script type='text/javascript'
+        src='//pl18541007.profitableratecpm.com/91/94/0f/91940f84fa379733194239a75eb1cbd0.js'></script>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BuffStreams - Live Streams</title>
-    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/78013897?v=4">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background-color: #0d1117;
-            color: #e7ffe7;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            padding: 30px 15px;
-        }
-
-        .content-box {
-            background: #161b22;
-            border-radius: 12px;
-            max-width: 1200px;
-            width: 100%;
-            display: flex;
-            padding: 20px;
-            border: 1px solid #30363d;
-            gap: 20px;
-        }
-
-        .main-content {
-            flex: 0 0 70%;
-        }
-
-        .ad-center {
-            display: flex;
-            justify-content: center;
-            margin: 10px 0;
-        }
-
-        .iframe-container {
-            position: relative;
-            width: 100%;
-            padding-top: 56.25%;
-            border-radius: 10px;
-            overflow: hidden;
-            margin: 15px 0;
-        }
-
-        .post-icons {
-            display: none;
-        }
-
-        .iframe-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-            border-radius: 10px;
-        }
-
-        .sidebar {
-            flex: 0 0 30%;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .sidebar .ad {
-            width: 100%;
-            overflow: hidden;
-        }
-
-        @media (max-width:768px) {
-            .container {
-                flex-direction: column;
-                padding: 10px;
-            }
-
-            .content-box {
-                flex-direction: column;
-                padding: 10px;
-                align-items: center;
-            }
-
-            .main-content,
-            .sidebar {
-                width: 100%;
-            }
-
-            .sidebar {
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-                margin-top: 20px;
-            }
-
-            .sidebar .ad {
-                width: 100%;
-                max-width: 100%;
-            }
-
-            .ad-center {
-                justify-content: center;
-                margin: 10px 0;
-            }
-
-            .iframe-container {
-                width: 100%;
-                padding-top: 56.25%;
-            }
-        }
-    </style>
+    <title>Buffstreams | Live Match Player</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.png" />
 </head>
 <body>
+    <div class="discord-wrapper">
+        <div class="discord-box">
+            <h2 class="discord-title">Stay Connected</h2>
+            <p class="discord-subtext">Join our Discord for match alerts & latest sports updates</p>
+
+            <div class="discord-logo-container">
+                <a href="https://discord.com/invite/TrWA6eRahz" target="_blank" class="discord-logo-link">
+                    <img src="./discord.svg" alt="Join Discord" class="discord-logo">
+                </a>
+            </div>
+            <div class="discord-join-note">Click the Box to join</div>
+        </div>
+    </div>
     <div class="container">
         <div class="content-box">
             <section class="main-content">
                 <div class="ad-center">
-                 <script type="text/javascript">
-	atOptions = {
-		'key' : '0917b618562c4a09e453780af8821437',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/0917b618562c4a09e453780af8821437/invoke.js"></script>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '0917b618562c4a09e453780af8821437',
+                            'format': 'iframe',
+                            'height': 60,
+                            'width': 468,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/0917b618562c4a09e453780af8821437/invoke.js"></script>
                 </div>
                 <div
                     style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">
@@ -144,44 +49,45 @@
                         frameborder="0" allowfullscreen src=""></iframe>
                 </div>
                 <div class="ad-center">
-                  <script type="text/javascript">
-	atOptions = {
-		'key' : '62a694d4a1a8f6f75b744585d414f93c',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/62a694d4a1a8f6f75b744585d414f93c/invoke.js"></script>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '62a694d4a1a8f6f75b744585d414f93c',
+                            'format': 'iframe',
+                            'height': 50,
+                            'width': 320,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/62a694d4a1a8f6f75b744585d414f93c/invoke.js"></script>
                 </div>
             </section>
-
             <aside class="sidebar">
                 <div class="ad">
-                  <script type="text/javascript">
-	atOptions = {
-		'key' : '05f629c84db5ad6e762d2406be4ee48d',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/05f629c84db5ad6e762d2406be4ee48d/invoke.js"></script>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '05f629c84db5ad6e762d2406be4ee48d',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/05f629c84db5ad6e762d2406be4ee48d/invoke.js"></script>
                 </div>
-
                 <div class="ad">
-                  <script type="text/javascript">
-	atOptions = {
-		'key' : 'b145f0a8ad4e19e103be39d5a7fa45be',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'b145f0a8ad4e19e103be39d5a7fa45be',
+                            'format': 'iframe',
+                            'height': 300,
+                            'width': 160,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/b145f0a8ad4e19e103be39d5a7fa45be/invoke.js"></script>
                 </div>
             </aside>
         </div>
@@ -189,12 +95,10 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const myParam = urlParams.get("frame");
-
         let dPlayer = document.querySelector("#frame-player");
-
         dPlayer.src = myParam;
     </script>
-	 <script type="text/javascript">
+    <script type="text/javascript">
         var _Hasync = _Hasync || [];
         _Hasync.push(['Histats.start', '1,4954898,4,511,95,18,00000000']);
         _Hasync.push(['Histats.fasi', '1']);
@@ -206,7 +110,6 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
         })();
     </script>
-
     <noscript>
         <a href="/" target="_blank">
             <img src="//sstatic1.histats.com/0.gif?4954898&amp;101" alt="web stats" border="0"
@@ -214,5 +117,4 @@
         </a>
     </noscript>
 </body>
-
 </html>
